...
                "all clear.",
                MetroTheme.typography.listName,
                Modifier.padding(top = 8.dp),
                maxLines = 1
            )
            MetroText(
                "nothing due today",
                MetroTheme.typography.caption,
                color = MetroTheme.colors.secondary,
                maxLines = 1
            )
        }
    }
...
